[package]
name = "emulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# [[bin]]
# path = "src/sound.rs"
# name = "sound"

[dependencies]
env_logger = "0.9"
log = "0.4"
pixels = "0.9"
winit = "0.26"
winit_input_helper = "0.11"
rodio = "0.14"
rand = "0.8"
crossbeam-channel = "0.5"